What is the point of small commits?

--- a/index.html
+++ b/index.html
@@ -4,11 +4,15 @@
         <meta charset="utf-8">
         <title>Kaiju Board</title>
 
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+
         <link rel="stylesheet" type="text/css" href="css/main.css">
     </head>
 
     <body>
         <div id="stage"></div>
+
+        <script src="bower_components/underscore/underscore-min.js"></script>
 
         <!-- Load the entry point of the game and other deps using require. -->
         <script data-main="js/main" src="lib/require.js"></script>
